Fix failing suggester tests for Java9+