@@ -312,28 +312,4 @@ Portions Copyright (c) 2017-2018, Chris Fraire <cfraire@me.com>.
         </plugins>
     </build>
 
-    <profiles>
-        <profile>
-            <id>java9plus</id>
-            <activation>
-                <jdk>[9,10]</jdk>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <argLine>
-                                --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
-                                --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
-                                --add-exports java.base/sun.nio.ch=ALL-UNNAMED
-                            </argLine>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
-
 </project>
